src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__vec__tests__it_matches_basic_iteration.snap
---
source: src/type_atoms/adt/vec.rs
expression: "(insta_match_test!(+ parse Vec<Ident> : hello world hi),\n    insta_match_test!(* peek Vec<Ident> : hello world hi))"
---
(
    Ok(
        [
            Ident(
                hello,
            ),
            Ident(
                world,
            ),
            Ident(
                hi,
            ),
        ],
    ),
    Some(
        3,
    ),
)
