src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__vec__tests__it_matches_catch_all.snap
---
source: src/type_atoms/adt/vec.rs
expression: "(insta_match_test!(+ parse Rep<TokenTree> : r#hello hello struct _ 'a'\n        { \"hi\" }),\n    insta_match_test!(* peek Rep<TokenTree> : r#hello hello struct _ 'a'\n        { \"hi\" }))"
---
(
    Ok(
        Rep(
            [
                Ident {
                    sym: r#hello,
                },
                Ident {
                    sym: hello,
                },
                Ident {
                    sym: struct,
                },
                Ident {
                    sym: _,
                },
                Literal {
                    lit: 'a',
                },
                Group {
                    delimiter: Brace,
                    stream: TokenStream [
                        Literal {
                            lit: "hi",
                        },
                    ],
                },
            ],
        ),
    ),
    Some(
        7,
    ),
)
