src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__vec__tests__it_matches_comments.snap
---
source: src/type_atoms/adt/vec.rs
expression: "(insta_match_test!(+ parse Vec<TokenTree> :),\n    insta_match_test!(* peek Vec<TokenTree> :))"
---
(
    Ok(
        [],
    ),
    Some(
        0,
    ),
)
