src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__vec__tests__it_matches_esoterics.snap
---
source: src/type_atoms/adt/vec.rs
expression: "(insta_match_test!(+ parse Rep<(Ident, Option<(Two, Ident)>, Two)> : r1 :: r2\n        :: r3 :: r4 :: r5 ::),\n    insta_match_test!(* peek Rep<(Ident, Option<(Two, Ident)>, Two)> : r1 ::\n        r2 :: r3 :: r4 :: r5 ::))"
---
(
    Ok(
        Rep(
            [
                (
                    Ident(
                        r1,
                    ),
                    Some(
                        (
                            (
                                FPunct(
                                    Span,
                                ),
                                FPunct(
                                    Span,
                                ),
                            ),
                            Ident(
                                r2,
                            ),
                        ),
                    ),
                    (
                        FPunct(
                            Span,
                        ),
                        FPunct(
                            Span,
                        ),
                    ),
                ),
                (
                    Ident(
                        r3,
                    ),
                    Some(
                        (
                            (
                                FPunct(
                                    Span,
                                ),
                                FPunct(
                                    Span,
                                ),
                            ),
                            Ident(
                                r4,
                            ),
                        ),
                    ),
                    (
                        FPunct(
                            Span,
                        ),
                        FPunct(
                            Span,
                        ),
                    ),
                ),
                (
                    Ident(
                        r5,
                    ),
                    None,
                    (
                        FPunct(
                            Span,
                        ),
                        FPunct(
                            Span,
                        ),
                    ),
                ),
            ],
        ),
    ),
    Some(
        15,
    ),
)
