src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__vec__tests__it_specifies_correct_backstep.snap
---
source: src/type_atoms/adt/vec.rs
expression: "(insta_match_test!(+ parse Rep<(Ident, Ident)> : hello world hi),\n    insta_match_test!(* peek Rep<(Ident, Ident)> : hello world hi))"
---
(
    Ok(
        Rep(
            [
                (
                    Ident(
                        hello,
                    ),
                    Ident(
                        world,
                    ),
                ),
            ],
        ),
    ),
    Some(
        2,
    ),
)
